[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Pretty Interesting Sky Samples"
authors = ["Juho Karenko <juho.karenko@wheelq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
